# Last

./: Cargo.toml  function.js  function_clean.js  function_new.js  opcode_mapping.json  unminified(1).js  vm_extracted.js
Tester/: opcode_mapping.json
Tester/src/deobfuscator/: mod.rs
Tester/src/deobfuscator/transformers/: mod.rs  proxy_functions.rs  strings.rs
Tester/src/parser/: mod.rs
Tester/src/solver/network/: mod.rs
Tester/src/utils/: http.rs
src/: lib.rs
src/deobfuscator/: mod.rs  parallel_arenas.rs
src/deobfuscator/transformers/: control_flow_flattening.rs  dynamic_xtea_decryptor.rs  mod.rs  normalize_conditionals.rs  numbers.rs  proxy_functions.rs  strings.rs
src/parser/: magic_bits.rs
src/reverse/: encryption.rs  mod.rs
src/solver/: mod.rs  vm_opcode_mapper.rs
