[package]
name = "cf"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
oxc_allocator = "0.62.0"
oxc_ast = "0.62.0"
oxc_ast_visit = "0.62.0"
oxc_parser = "0.62.0"
oxc_semantic = "0.62.0"
oxc_span = "0.62.0"
oxc_codegen = "0.62.0"

petgraph = "0.8.1"
rustc-hash = "2.0.0"

base64 = "0.22"
strum = { version = "0.27", features = ["derive"] }

serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
rquest = { version = "5.1", features = ["cookies", "brotli", "gzip", "stream", "json"] }
anyhow = "1.0"
rquest-util = "2.2"
tokio = { version = "1.44", features = ["macros", "rt", "rt-multi-thread"] }
once_cell = "1.21"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
png = "0.18"
async-trait = "0.1"
url = "2.5"
num = "0.4"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
sha2 = "0.11.0-rc.5"
hex = "0.4"
rand = "0.9"
uuid = { version = "1.10", features = ["v4"] }
regex = "1.11"
flate2 = "1.1"
brotli = "8.0"
zstd = "0.13"
maxminddb = "0.26"
byteorder = "1.5"
aes = "0.8"
generic-array = "0.14"
hmac = "0.12"
ureq = "2.9"

rayon = "1.10"

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "hybrid-solver"
path = "src/bin/hybrid_solver.rs"

[[bin]]
name = "vm-opcode-mapper"
path = "src/bin/vm_opcode_mapper.rs"

[[bin]]
name = "extract-target"
path = "src/bin/extract_target.rs"
